
  * Show Subversion revno and uuid in "bzr version-info". (Jelmer Vernooij,
    #490771)

 PERFORMANCE

  * When updating the log cache, fetch from newest to oldest revision as 
    the Subversion database backends are optimized for this. 
	(John Szakmeister)

  * Fetch history information newest revision to oldest revision because of 
    speed.  (John Szakmeister, #453789)


bzr-svn	1.0.1					  2009-10-20

 BUG FIXES

  * Mark as compatible with Bazaar 2.1. (Jelmer Vernooij)

  * Only use tdb if Tdb.get is there. (Jelmer Vernooij, #440211)

  * Cope with xdg_cache_home sometimes containing unicode. (Jelmer Vernooij)

  * Provide right infrastructure for bzrlib.tests.per_foreign_vcs. 
    (Jelmer Vernooij)

bzr-svn 1.0.0					  2009-09-24

 PERFORMANCE

  * Avoid re-fetching the basis inventory during fetch. (Jelmer Vernooij)

 BUG FIXES

  * Generate valid inventory delta's when the root of a tree is replaced with an older 
    copy of itself. (Jelmer Vernooij)

  * Hide backtrace for EAI_NONAME errors. (John Szakmeister)

  * Allow commits without an author. (Jelmer Vernooij, #434230)

  * Cope with extra arguments to Repository._check(). (Jelmer Vernooij)

  * Properly encode symlink targets when pushing. (Jelmer Vernooij)

bzr-svn 1.0.0rc1				  2009-09-20

 FEATURES

  * Mark as compatible with Bazaar 2.0. (Jelmer Vernooij)

 BUG FIXES

  * Cope with InProcessTransport errors during format probe. (Jelmer Vernooij,
															  #433803)

bzr-svn	0.6.5					 2009-09-01

 API CHANGES

  * Removed unused SvnRepository.find_children() function. (Jelmer Vernooij)

 FEATURES

  * Mark as compatible with bzr 1.18. (Jelmer Vernooij)

bzr-svn 0.6.4					 2009-08-03

 BUG FIXES

  * Handle 404's being returned during http probe. (#402063) (Jelmer Vernooij)

  * Handle patch change requests that are too large without 
    printing a traceback. (#394527) (Jelmer Vernooij)

  * Avoid printing backtrace on lock contention. (#401677) (Jelmer Vernooij)
